...
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="horizontal"
    android:padding="8dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
  <ImageButton
      android:id="@+id/videoBox"
      android:src="@mipmap/ic_launcher"
      android:layout_width="0dp"
      android:minHeight="100dp"
      android:minWidth="100dp"
      android:layout_height="wrap_content"
      tools:src="@tools:sample/avatars"
...
          android:layout_width="wrap_content"
          android:layout_height="40dp"
          android:text="@string/save"
          android:layout_weight="4"
          />
      <Button
          android:id="@+id/deleteBtn"
          android:layout_width="50dp"
          android:layout_height="40dp"
          android:text="@string/delete_icon"
          android:textColor="@android:color/holo_red_dark"
          android:layout_weight="0"
          />
...
