<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.multimediamemos.MainActivity">
    <item
        android:id="@+id/action_add"
        android:icon="@android:drawable/ic_input_add"
        android:title="@string/add"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_search"
        android:orderInCategory="100"
        android:title="@string/action_search"
        app:showAsAction="ifRoom" />
</menu>